--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">WorldLine_Android_Technical_Test</string>
+    <string name="app_name">The movie</string>
 </resources>
